# TradingSystem

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: test.yml
include/trading/: logger.h  logger.hpp  type.h  type.hpp
include/trading/execution/: engine.h  engine.hpp  query.h  query.hpp
include/trading/option/: readme.md
include/trading/orderbook/: order.h  order.hpp  orderbook.h  orderbook.hpp  snapshot.h  snapshot.hpp
include/trading/processor/: market_data_record.h  market_data_record.hpp  processor.h  processor.hpp
lib/: CMakeLists.txt  engine.cpp  orderbook.cpp  processor.cpp
python/: fetching_okx_option_data.py
src/: CMakeLists.txt  engine.cpp  logger.cpp  main.cpp  orderbook.cpp  processor.cpp
tests/: CMakeLists.txt  draft.cpp  engine.cpp  market_data_reading.cpp  orderbook.cpp  orderbook_cancel_function.cpp  orderbook_trade_function.cpp  test_engine.cpp  test_market_data_reading.cpp  test_orderbook.cpp  test_orderbook_cancel_function.cpp  test_orderbook_trade_function.cpp
